tests/lean/alias3.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
Error (line: 2, pos: 13) alias 'A' was already defined
